# FlightComputer2022-23

./: .gitignore  Cargo.toml  Doxyfile  FlightComputer.code-workspace  baro-test.hex  build.rs  flash-test-2.hex  main.hex  package-lock.json  package.json  platformio.ini  receive.hex  transmit.hex  tsconfig.json
docs/html/: annotated.html  annotated_dup.js  class_instrument-members.html  class_instrument.html  class_instrument.js  class_instrument_manager-members.html  class_instrument_manager.html  class_instrument_manager.js  class_instrument_manager_a3e862ea73f5b7a96806c7b5bc5f79554_icgraph.map  class_instrument_manager_a3e862ea73f5b7a96806c7b5bc5f79554_icgraph.md5  class_logger_subsystem-members.html  class_logger_subsystem.html  class_logger_subsystem__coll__graph.md5  class_logger_subsystem__inherit__graph.map  class_pyro_subsystem-members.html  class_pyro_subsystem.html  class_pyro_subsystem__coll__graph.map  class_pyro_subsystem__coll__graph.md5  class_pyro_subsystem_a69acfdec15f5f0ca046d2496750c616e_icgraph.map  class_pyro_subsystem_a69acfdec15f5f0ca046d2496750c616e_icgraph.md5  class_pyro_subsystem_affb44e12799c73971ac6a2ea0b28ab76_icgraph.map  class_pyro_subsystem_affb44e12799c73971ac6a2ea0b28ab76_icgraph.md5  class_subsystem-members.html  (+167 more)
scripts/: common.ts  gen.ts  types.d.ts
src/: Tranciever.cpp  Tranciever.hpp  avionics.rs  flash.rs  gps.rs  instrument.hpp  instrument_manager.hpp  kalman.cpp  log.cpp  log.hpp  main.cpp  main.rs  prelude.hpp  spi_manager.rs  state.hpp  subsystem.hpp  subsystem_manager.hpp  test.rs  util.rs  w25q64.cpp  w25q64.hpp
(+86 files in other folders)
