[package]
name = "teensy-flash-test"
version = "0.1.0"
authors = ["Serena <sjtl2004@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
imxrt-hal = "0.5.1"
typenum = "1.16.0"

# Remove me if you don't want logging
log = "0.4.17"
teensy4-panic = "0.2.2"
paste = "1.0.12"

[dependencies.teensy4-bsp]
version = "0.4"
features = ["rt", "usb-logging"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
