[package]
name = "flight-computer-2022-23"
version = "0.1.0"
authors = ["Serena <sjtl2004@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
typenum = "1.16.0"
log = "0.4.17"
paste = "1.0.12"
micromath = "2.0.0"
sx127x_lora = "0.3.1"
nb = "1.1.0"
ansi_rgb = "0.2.0"

[dependencies.teensy4-panic]
version = "0.2.2"
features = ["log"]

[dependencies.teensy4-bsp]
version = "0.4"
features = ["rt", "usb-logging"]

[dependencies.imxrt-hal]
version = "0.5.1"
features = ["imxrt1060"]

[patch.crates-io]
imxrt-hal = { git = "https://github.com/Case-Rocket-Team/imxrt-hal.git" }

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
